# coalent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
brand/: BRAND.md  tokens.css  tokens.json
examples/: eval_demo.py  quickstart.py  rag_integration.py
src/coalent/: __init__.py  cli.py  integrations.py
src/coalent/adapters/: __init__.py  providers.py
src/coalent/domain/: __init__.py  models.py
src/coalent/evaluation/: __init__.py  harness.py
src/coalent/events/: __init__.py  connectors.py  dispatcher.py  http.py  signatures.py
src/coalent/semantic/: __init__.py  cache.py  calibrate.py  embedding.py  memory.py  ports.py  serde.py  store.py  synthesizer.py  unit.py  vector.py
tests/: conftest.py  test_calibrate.py  test_cli.py  test_composite_retriever.py  test_context.py  test_embedding.py  test_evaluation.py  test_freshness.py  test_integrations.py  test_json_synthesizer.py  test_persistence.py  test_redis_store.py  test_relationships.py  test_retrievers.py  test_semantic_core.py  test_synthesizer.py  test_v03_coverage.py  test_v03_foundation.py  test_v03_hooks.py  test_v03_matching.py  test_vector_adapters.py
