[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coalent"
version = "0.2.0"
description = "A real-time, provenance-invalidated cognitive cache layer for AI agents and RAG."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Nisarg Pujara", email = "nisarg.pujara@vectorlinklabs.com" }]
keywords = [
  "rag", "llm", "agents", "context", "cache", "provenance",
  "langgraph", "crewai", "mcp", "context-engineering",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
langgraph = ["langgraph>=0.2"]
mcp = ["mcp>=1.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
server = ["fastapi>=0.110"]
redis = ["redis>=5.0"]
qdrant = ["qdrant-client>=1.7"]
chroma = ["chromadb>=0.4"]
pgvector = ["psycopg[binary]>=3.1"]
dev = ["pytest>=7.0", "pytest-cov", "mypy>=1.8", "ruff>=0.4"]

[project.scripts]
coalent = "coalent.cli:main"

[project.urls]
Homepage = "https://github.com/Vectorlink-Labs/coalent"
Repository = "https://github.com/Vectorlink-Labs/coalent"
Documentation = "https://github.com/Vectorlink-Labs/coalent#readme"
Issues = "https://github.com/Vectorlink-Labs/coalent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/coalent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
